--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "removeComments": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
