--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@types/react-dnd-multi-backend": "^6.0.1",
     "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.18",
+    "avataaars": "^2.0.0",
     "customize-cra": "^1.0.0",
     "emotion-normalize": "^11.0.1",
     "i18next": "^21.2.4",
