Fix missing s in package name

--- a/app/tsconfig.paths.json
+++ b/app/tsconfig.paths.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@gamepark/lucky-number/*": ["../rules/src/*"]
+      "@gamepark/lucky-numbers/*": ["../rules/src/*"]
     }
   }
 }
