--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-app-rewire-alias": "^1.0.3",
     "react-app-rewired": "^2.1.8",
+    "react-device-detect": "^2.1.2",
     "react-dnd": "^14.0.3",
     "react-dnd-html5-backend": "^14.0.1",
     "react-dnd-multi-backend": "^6.0.2",
