--- a/rules/package.json
+++ b/rules/package.json
@@ -17,9 +17,11 @@
     "prepublishOnly": "tsc"
   },
   "dependencies": {
-    "@gamepark/rules-api": "~5.10.0"
+    "@gamepark/rules-api": "~5.11.2",
+    "lodash.shuffle": "^4.2.0"
   },
   "devDependencies": {
+    "@types/lodash.shuffle": "^4.2.7",
     "i18next": "^21.2.4"
   }
 }
