--- a/rules/package.json
+++ b/rules/package.json
@@ -16,12 +16,14 @@
     "build": "tsc",
     "prepublishOnly": "tsc"
   },
-  "dependencies": {
-    "@gamepark/rules-api": "~5.11.2",
+  "peerDependencies": {
+    "@gamepark/rules-api": "^5.14.0",
     "lodash.shuffle": "^4.2.0"
   },
   "devDependencies": {
+    "@gamepark/rules-api": "~5.14.0",
+    "lodash.shuffle": "^4.2.0",
     "@types/lodash.shuffle": "^4.2.7",
-    "i18next": "^21.2.4"
+    "i18next": "^21.8.14"
   }
 }
