--- a/rules/package.json
+++ b/rules/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gamepark/lucky-numbers",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Lucky Number rules for Game Park",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -22,8 +22,8 @@
   },
   "devDependencies": {
     "@gamepark/rules-api": "~5.14.0",
-    "lodash.shuffle": "^4.2.0",
     "@types/lodash.shuffle": "^4.2.7",
-    "i18next": "^21.8.14"
+    "i18next": "^21.8.14",
+    "lodash.shuffle": "^4.2.0"
   }
 }
